Nearly finish README.md, add notes to html pages

--- a/events.html
+++ b/events.html
@@ -52,7 +52,9 @@
                         <p>(weather permitting!)</p>
                     </div>
                 </div>
+                <!-- Page spacing -->
                 <div class="container page-spacing-events"></div>
+                <!-- /Page spacing -->
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
                         <h4>Week Beginning 29/11</h4>
@@ -78,7 +80,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Page spacing -->
                 <div class="container page-spacing-events"></div>
+                <!-- /Page spacing -->
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
                         <h4>Week Beginning 06/12</h4>
@@ -104,7 +108,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Page spacing -->
                 <div class="container page-spacing-events"></div>
+                <!-- /Page spacing -->
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
                         <h4>Week Beginning 13/12</h4>
@@ -130,7 +136,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Page spacing -->
                 <div class="container page-spacing-events"></div>
+                <!-- /Page spacing -->
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
                         <h4>Week Beginning 20/12</h4>
@@ -156,7 +164,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Page spacing -->
                 <div class="container page-spacing-events"></div>
+                <!-- /Page spacing -->
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
                         <h4>Week Beginning 27/12</h4>
@@ -182,7 +192,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Page spacing -->
                 <div class="container page-spacing-events"></div>
+                <!-- /Page spacing -->
                 <div class="events-background-wrapper">
                     <div class="events-page-title-container">
                         <h3>Cinematography Competition!</h3>
