--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </header>
-    <div id="gallery">
+    <section id="gallery">
         <div class="container-fluid g-0">
             <img src="assets/images/gallery-img-1.jpg" alt="">
             <img src="assets/images/gallery-img-2.jpg" alt="">
@@ -58,7 +58,7 @@
             <img src="assets/images/gallery-img-11.jpg" alt="">
             <img src="assets/images/gallery-img-12.jpg" alt="">
         </div>
-    </div>
+    </section>
     <footer>
         <ul>
             <li>
