--- a/join.html
+++ b/join.html
@@ -47,7 +47,9 @@
         <div class="container-fluid g-0">
             <div class="container-fluid g-0 join-background-img">
                 <div class="container-fluid g-0 join-background-opacity-layer">
+                    <!-- Page spacing -->
                     <div class="page-spacing-join"></div>
+                    <!-- /Page spacing -->
                     <h3>Fly with us!</h3>
                     <form action="https://formdump.codeinstitute.net/" method="POST">
                         <div class="row g-0">
@@ -74,15 +76,21 @@
                                 <input type="email" id="email" name="email" placeholder="Your email">
                             </div>
                         </div>
+                        <!-- Page spacing -->
                         <div class="page-spacing-join-middle"></div>
+                        <!-- /Page spacing -->
                         <div class="row g-0">
-                            <div class="col">
+                            <div class="col join-left">
                                 <button class="btn btn-secondary btn-secondary-bg-color" type="reset"><span class="btn-font">Clear</span></button>
+                            </div>
+                            <div class="col join-right">
                                 <button class="btn btn-secondary btn-secondary-bg-color btn-font" type="submit" id="submit-button"><span class="btn-font">Sign Up</span></button>
                             </div>
                         </div>
                     </form>
+                    <!-- Page spacing -->
                     <div class="page-spacing-join-bottom"></div>
+                    <!-- /Page spacing -->
                 </div>
             </div>
         </div>
